# api-rs

./: .env.example  Cargo.toml  Dockerfile  Makefile  cloudbuild.yaml  docker-compose.yml
argocd/: api-rs.yaml
src/: lib.rs  main.rs
src/config/: api.rs
src/handler/: metrics.rs  middleware.rs  mod.rs  processor.rs  server.rs
src/model/: domain.rs  error.rs  mod.rs  state.rs
