[package]
name = "api-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
async-trait = "0.1.68"
axum = "0.6.12"
chrono = { version = "0.4.24", features = ["serde"] } 
dotenv = "0.15.0"
envy = "0.4.2"
hyper = "0.14.25"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0.158", features = ["derive"] }
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
